--- a/SMMass/app/templates/base.html
+++ b/SMMass/app/templates/base.html
@@ -20,6 +20,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('smm.vk_stats') }}">VK Stats</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('smm.telegram_stats') }}">Статистика Telegram</a>
+                </li>
             </ul>
             <ul class="navbar-nav ml-auto">
                 {% if session['user_id'] %}
